// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`realty/use-guide-variables Ищет цвета с alpha === 1 в hex 1`] = `
Array [
  Object {
    "deprecations": Array [],
    "errored": true,
    "invalidOptionWarnings": Array [],
    "parseErrors": Array [],
    "source": "<input css 6>",
    "warnings": Array [
      Object {
        "column": 7,
        "line": 1,
        "rule": "realty/use-guide-variables",
        "severity": "error",
        "text": "Expected color from variable \\"--black\\" for \\"color: rgba(0, 0, 0, 1)\\". (realty/use-guide-variables)",
      },
    ],
  },
]
`;

exports[`realty/use-guide-variables Находит hex в rgb 1`] = `
Array [
  Object {
    "deprecations": Array [],
    "errored": true,
    "invalidOptionWarnings": Array [],
    "parseErrors": Array [],
    "source": "<input css 3>",
    "warnings": Array [
      Object {
        "column": 7,
        "line": 1,
        "rule": "realty/use-guide-variables",
        "severity": "error",
        "text": "Expected color from variable \\"--green\\" for \\"color: #00ff00\\". (realty/use-guide-variables)",
      },
    ],
  },
]
`;

exports[`realty/use-guide-variables Находит rgb в hex 1`] = `
Array [
  Object {
    "deprecations": Array [],
    "errored": true,
    "invalidOptionWarnings": Array [],
    "parseErrors": Array [],
    "source": "<input css 2>",
    "warnings": Array [
      Object {
        "column": 7,
        "line": 1,
        "rule": "realty/use-guide-variables",
        "severity": "error",
        "text": "Expected color from variable \\"--red\\" for \\"color: rgb(255, 0, 0)\\". (realty/use-guide-variables)",
      },
    ],
  },
]
`;

exports[`realty/use-guide-variables Находит цвета внутри короткой записи css-правила 1`] = `
Array [
  Object {
    "deprecations": Array [],
    "errored": true,
    "invalidOptionWarnings": Array [],
    "parseErrors": Array [],
    "source": "<input css 7>",
    "warnings": Array [
      Object {
        "column": 7,
        "line": 1,
        "rule": "realty/use-guide-variables",
        "severity": "error",
        "text": "Expected color from variable \\"--gray\\" for \\"border: 1px solid gray\\". (realty/use-guide-variables)",
      },
    ],
  },
]
`;

exports[`realty/use-guide-variables Не различает длинную и короткую hex запись 1`] = `
Array [
  Object {
    "deprecations": Array [],
    "errored": true,
    "invalidOptionWarnings": Array [],
    "parseErrors": Array [],
    "source": "<input css 4>",
    "warnings": Array [
      Object {
        "column": 7,
        "line": 1,
        "rule": "realty/use-guide-variables",
        "severity": "error",
        "text": "Expected color from variable \\"--green\\" for \\"color: #0f0\\". (realty/use-guide-variables)",
      },
      Object {
        "column": 20,
        "line": 1,
        "rule": "realty/use-guide-variables",
        "severity": "error",
        "text": "Expected color from variable \\"--red\\" for \\"background-color: #FF0000\\". (realty/use-guide-variables)",
      },
    ],
  },
]
`;

exports[`realty/use-guide-variables Работает только для перечисленных свойств 1`] = `
Array [
  Object {
    "deprecations": Array [],
    "errored": true,
    "invalidOptionWarnings": Array [],
    "parseErrors": Array [],
    "source": "<input css 1>",
    "warnings": Array [
      Object {
        "column": 7,
        "line": 1,
        "rule": "realty/use-guide-variables",
        "severity": "error",
        "text": "Expected variable \\"--font-size-14\\" for \\"font-size: 14px\\". (realty/use-guide-variables)",
      },
    ],
  },
]
`;
